--- a/src/main/resources/templates/member/memberedit.html
+++ b/src/main/resources/templates/member/memberedit.html
@@ -34,7 +34,7 @@
 					</tr>
 				</table>
 			</form>
-			<br> <a href="PsdList.do">목록으로</a>
+			<br> <a href="memberList.do">목록으로</a>
 		</div>
 	</section>
 	<div th:replace="/include/bottom"></div>
